extends Node

@onready var bullet_sfx = $Bullet
@onready var thrust_sfx = $Thrust
@onready var exp_death = $ExplosionDeath
@onready var exp_short = $ExplosionShort
@onready var beeping = $Beeping
@onready var rapid_fire = $RapidFire
@onready var alarm_alert = $Alarm
@onready var wave_boom = $WaveBoom
